--- a/package.json
+++ b/package.json
@@ -16,13 +16,19 @@
   "dependencies": {
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
+    "@react-icons/all-files": "^4.1.0",
+    "@theme-ui/preset-funk": "^0.13.0",
+    "babel-preset-gatsby": "^2.4.0",
     "gatsby": "^4.2.0",
     "gatsby-plugin-image": "^2.2.0",
     "gatsby-plugin-mdx": "^3.2.0",
     "gatsby-plugin-sharp": "^4.2.0",
+    "gatsby-plugin-theme-ui": "^0.13.0",
     "gatsby-source-filesystem": "^4.2.0",
     "gatsby-transformer-sharp": "^4.4.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-icons": "^4.3.1",
+    "theme-ui": "^0.13.0"
   }
 }
