--- a/package.json
+++ b/package.json
@@ -18,17 +18,24 @@
     "@mdx-js/react": "^1.6.22",
     "@react-icons/all-files": "^4.1.0",
     "@theme-ui/preset-funk": "^0.13.0",
+    "@theme-ui/prism": "^0.13.1",
     "babel-preset-gatsby": "^2.4.0",
     "gatsby": "^4.2.0",
     "gatsby-plugin-image": "^2.2.0",
     "gatsby-plugin-mdx": "^3.2.0",
     "gatsby-plugin-sharp": "^4.2.0",
     "gatsby-plugin-theme-ui": "^0.13.0",
+    "gatsby-remark-prismjs": "^6.10.0",
     "gatsby-source-filesystem": "^4.2.0",
+    "gatsby-transformer-remark": "^5.10.1",
     "gatsby-transformer-sharp": "^4.4.0",
+    "prismjs": "^1.27.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.3.1",
     "theme-ui": "^0.13.0"
+  },
+  "devDependencies": {
+    "gatsby-remark-prismjs-title": "^1.0.0"
   }
 }
