--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gatsby-plugin-image": "^2.2.0",
     "gatsby-plugin-mdx": "^3.2.0",
     "gatsby-plugin-sharp": "^4.2.0",
+    "gatsby-plugin-sitemap": "^5.24.0",
     "gatsby-plugin-theme-ui": "^0.13.0",
     "gatsby-remark-prismjs": "^6.10.0",
     "gatsby-source-filesystem": "^4.2.0",
