--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gatsby": "^4.2.0",
     "gatsby-plugin-image": "^2.2.0",
     "gatsby-plugin-mdx": "^3.2.0",
+    "gatsby-plugin-react-helmet": "^5.24.0",
     "gatsby-plugin-sharp": "^4.2.0",
     "gatsby-plugin-sitemap": "^5.24.0",
     "gatsby-plugin-theme-ui": "^0.13.0",
@@ -33,6 +34,7 @@
     "prismjs": "^1.27.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.3.1",
     "theme-ui": "^0.13.0"
   },
