Gatsby JS バージョンアップ対応

--- a/package.json
+++ b/package.json
@@ -14,31 +14,38 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
-    "@mdx-js/mdx": "^1.6.22",
-    "@mdx-js/react": "^1.6.22",
+    "@mdx-js/mdx": "^2.3.0",
+    "@mdx-js/react": "^2.3.0",
     "@react-icons/all-files": "^4.1.0",
+    "@tailwindcss/vite": "^4.0.17",
     "@theme-ui/preset-funk": "^0.13.0",
     "@theme-ui/prism": "^0.13.1",
     "babel-preset-gatsby": "^2.4.0",
-    "gatsby": "^4.2.0",
-    "gatsby-plugin-image": "^2.2.0",
-    "gatsby-plugin-mdx": "^3.2.0",
+    "gatsby": "^5.14.1",
+    "gatsby-plugin-image": "^3.14.0",
+    "gatsby-plugin-mdx": "^5.0.0",
     "gatsby-plugin-react-helmet": "^5.24.0",
-    "gatsby-plugin-sharp": "^4.2.0",
+    "gatsby-plugin-sharp": "^5.14.0",
     "gatsby-plugin-sitemap": "^5.24.0",
     "gatsby-plugin-theme-ui": "^0.13.0",
     "gatsby-remark-prismjs": "^6.10.0",
-    "gatsby-source-filesystem": "^4.2.0",
+    "gatsby-source-filesystem": "^5.14.0",
     "gatsby-transformer-remark": "^5.10.1",
-    "gatsby-transformer-sharp": "^4.4.0",
+    "gatsby-transformer-sharp": "^5.14.0",
     "prismjs": "^1.27.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.3.1",
     "theme-ui": "^0.13.0"
   },
   "devDependencies": {
-    "gatsby-remark-prismjs-title": "^1.0.0"
+    "@tailwindcss/line-clamp": "^0.4.4",
+    "@tailwindcss/typography": "^0.5.16",
+    "autoprefixer": "^10.4.21",
+    "gatsby-plugin-postcss": "^6.14.0",
+    "gatsby-remark-prismjs-title": "^1.0.0",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.17"
   }
 }
