--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@theme-ui/prism": "^0.13.1",
     "babel-preset-gatsby": "^2.4.0",
     "gatsby": "^5.14.1",
+    "gatsby-adapter-netlify": "^1.2.0",
     "gatsby-plugin-image": "^3.14.0",
     "gatsby-plugin-mdx": "^5.0.0",
     "gatsby-plugin-react-helmet": "^5.24.0",
