--- a/package.json
+++ b/package.json
@@ -14,22 +14,25 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
     "@mdx-js/mdx": "^2.3.0",
     "@mdx-js/react": "^2.3.0",
     "@react-icons/all-files": "^4.1.0",
     "@tailwindcss/vite": "^4.0.17",
-    "@theme-ui/preset-funk": "^0.13.0",
-    "@theme-ui/prism": "^0.13.1",
+    "@theme-ui/mdx": "^0.17.2",
+    "@theme-ui/preset-funk": "^0.17.2",
+    "@theme-ui/prism": "^0.17.2",
+    "ajv": "^8.17.1",
     "babel-preset-gatsby": "^2.4.0",
     "gatsby": "^5.14.1",
     "gatsby-adapter-netlify": "^1.2.0",
     "gatsby-plugin-image": "^3.14.0",
     "gatsby-plugin-mdx": "^5.0.0",
-    "gatsby-plugin-react-helmet": "^5.24.0",
+    "gatsby-plugin-react-helmet": "^6.0.0",
     "gatsby-plugin-sharp": "^5.14.0",
-    "gatsby-plugin-sitemap": "^5.24.0",
-    "gatsby-plugin-theme-ui": "^0.13.0",
-    "gatsby-remark-prismjs": "^6.10.0",
+    "gatsby-plugin-sitemap": "^6.14.0",
+    "gatsby-plugin-theme-ui": "^0.17.2",
+    "gatsby-remark-prismjs": "^7.14.0",
     "gatsby-source-filesystem": "^5.14.0",
     "gatsby-transformer-remark": "^5.10.1",
     "gatsby-transformer-sharp": "^5.14.0",
@@ -38,7 +41,7 @@
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.3.1",
-    "theme-ui": "^0.13.0"
+    "theme-ui": "^0.17.2"
   },
   "devDependencies": {
     "@tailwindcss/line-clamp": "^0.4.4",
